some text updated

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="answer">
               <p class="answer__text">
-                I have experience using React JS, Redux, JavaScript, Tailwind, CSS, HTML, and related technologies. I have hands-on experience working on 10+ projects which makes me a better fit for this post. 
+                I have experience using React JS, Redux, JavaScript, Tailwind, CSS, HTML, Python and its related technologies. I have hands-on experience working on 10+ projects which makes me a better fit for this post. 
                  I am confident that my skills would be a great asset to your team.
                 </p>
             </div>
