--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel-yatree-Assignment ✈️</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 
@@ -153,7 +153,7 @@
               <i class="fa-solid fa-caret-down icon"></i>
             </div>
             <div class="answer">
-              <p class="answer__text">Github page, Vercel .</p>
+              <p class="answer__text">Github page, Vercel, Heroku.</p>
             </div>
           </li>
 
